--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="pref_plugin_mpris_desc">Control audio/video from your phone</string>
     <string name="pref_plugin_ping">Ping</string>
     <string name="pref_plugin_ping_desc">Send and receive pings</string>
+    <string name="pref_plugin_findmyphone">Find my phone</string>
+    <string name="pref_plugin_findmyphone_desc">Find phone</string>
     <string name="pref_plugin_notifications">Notification sync</string>
     <string name="pref_plugin_notifications_desc">Access your notifications from other devices</string>
     <string name="pref_plugin_sharereceiver">Share receiver</string>
